--- a/lattmat-dev.properties
+++ b/lattmat-dev.properties
@@ -1,2 +1,2 @@
-lattmatapp.redirectUrl = localhost:4200
-redirectUrl = localhost:4201
+lattmatapp.redirectUrl = http://localhost:4200
+redirectUrl = http://localhost:4201
